@@ -90,6 +90,12 @@ class DefaultHttpClientLogger
         asyncAppender.stop();
     }
 
+    @Override
+    public int getQueueSize()
+    {
+        return asyncAppender.getNumberOfElementsInQueue();
+    }
+
     private static void recoverTempFiles(String logPath)
     {
         // logback has a tendency to leave around temp files if it is interrupted
