@@ -25,6 +25,7 @@ public interface HttpClientLogger
 {
     void log(RequestInfo requestInfo, ResponseInfo responseInfo);
     void close();
+    int getQueueSize();
 
     class RequestInfo
     {
