@@ -1,6 +1,7 @@
 0.165
 
 - Add log buffer size config to HTTP client.
+- Add support for monitoring the logger queue size for HTTP client and server
 - Allow disabling the compression of log files for HTTP client and server.
 
 0.164
